--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,10 @@ services:
       ports:
         - 1883:1883
         - 9001:9001
+      volumes:
+        - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
+        - ./passwd:/mosquitto/config/passwd
+        - ./log:/mosquitto/log/
       restart: unless-stopped
 
 networks:
